--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,17 @@
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    max-width: 1900px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0;
     padding: 0;
-    background-color: #DEE6D1;
     font-family: 'Quicksand', sans-serif;
 }
 
