--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@
 */
 
 .App {
-    max-width: 1600px;
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,6 +18,10 @@
 
 a {
     text-decoration: none;
+}
+
+li {
+    list-style: none;
 }
 
 header {
@@ -29,7 +32,7 @@ header {
 }
 
 .navigation {
-    background-color: #89C4E4;
+    background-color: #BE624E;
     position: fixed;
     height: 100vh;
     width: 100%;
@@ -58,14 +61,14 @@ header nav ul li {
 }
 
 header nav ul li a {
-    color: #040404;
+    color: white;
     font-size: 25px;
 }
 
 .nav-border:before {
     content: '';
     display: block;
-    border-bottom: 2px solid #BE624E;
+    border-bottom: 2px solid #BDB775;
     width: 0;
     transition: width .30s ease-in-out;
 }
@@ -75,7 +78,7 @@ header nav ul li:hover .nav-border:before {
 }
 
 header nav ul li:hover a {
-    color: #BE624E;
+    color: #BDB775;
 }
 
 .hamburger {
@@ -101,10 +104,10 @@ header nav ul li:hover a {
     position: absolute;
     height: 3px;
     width: 100%;
-    background-color: black;
+    background-color: #1F155E;
     left: 0;
     top: 50%;
-    transition: background-color 80ms 80ms ease-in-out;
+    transition: background-color 8ms 8ms ease-in-out;
 }
 
 .hamburger__inner::before,
@@ -113,7 +116,7 @@ header nav ul li:hover a {
     position: absolute;
     height: 3px;
     width: 100%;
-    background-color: black;
+    background-color: #1F155E;
     left: 0;
     transition: transform 80ms 80ms ease-in-out;
 }
@@ -124,6 +127,14 @@ header nav ul li:hover a {
 
 .hamburger__inner:after {
     top: 10px;
+}
+
+.hamburger--active .hamburger__inner:after {
+    background-color: white;
+}
+
+.hamburger--active .hamburger__inner:before {
+    background-color: white;
 }
 
 .hamburger--active .hamburger__inner {
@@ -140,6 +151,184 @@ header nav ul li:hover a {
 
 .hamburger {
     transition: transform .3s .2s ease-in-out;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 1600px;
+    width: 100%;
+}
+
+.hello-section {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    row-gap: 20px;
+    padding: 20px;
+}
+
+.name-span {
+    font-size: 70px !important;
+    font-weight: 500;
+    color: #1F155E;
+}
+
+.hello-section span {
+    font-size: 25px;
+}
+
+.hello-contacts {
+    margin-top: 20px;
+}
+
+.hello-contacts ul {
+    display: flex;
+    column-gap: 20px;
+}
+
+.hello-contacts i {
+    color: #1F155E;
+    font-size: 35px;
+}
+
+.hello-contacts i:hover {
+    color: #BE624E;
+}
+
+/*Scroll Down*/
+
+.scroll-down {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    align-self: center;
+    padding-top: 79px;
+    text-align:center;
+    margin-bottom: 20px;
+}
+.arrow-down {
+    display: block;
+    margin: 0 auto;
+    width: 10px;
+    height: 38px;
+}
+.arrow-down:after {
+    content: '';
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 8px;
+    height: 8px;
+    border-top: 1px solid #BE624E;
+    border-right: 1px solid #BE624E;
+    transform: rotate(135deg);
+}
+.scroll-title {
+    display: block;
+    text-transform: uppercase;
+    color: #BE624E;
+    font-size:20px !important;
+    letter-spacing:.1em;
+}
+.scroll-down::before {
+    animation: elasticus 1.7s cubic-bezier(1, 0, 0, 1) infinite;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -1px;
+    width: 1px;
+    height: 88px;
+    background: #BE624E;
+    content: ' ';
+}
+@-webkit-keyframes elasticus {
+    0% {
+        transform-origin: 0% 0%;
+        transform: scale(1, 0);
+    }
+    50% {
+        transform-origin: 0% 0%;
+        transform: scale(1, 1);
+    }
+    50.1% {
+        transform-origin: 0% 100%;
+        transform: scale(1, 1);
+    }
+    100% {
+        transform-origin: 0% 100%;
+        transform: scale(1, 0);
+    }
+}
+@-moz-keyframes elasticus {
+    0% {
+        transform-origin: 0% 0%;
+        transform: scale(1, 0);
+    }
+    50% {
+        transform-origin: 0% 0%;
+        transform: scale(1, 1);
+    }
+    50.1% {
+        transform-origin: 0% 100%;
+        transform: scale(1, 1);
+    }
+    100% {
+        transform-origin: 0% 100%;
+        transform: scale(1, 0);
+    }
+}
+@-o-keyframes elasticus {
+    0% {
+
+        transform-origin: 0% 0%;
+        transform: scale(1, 0);
+    }
+    50% {
+        transform-origin: 0% 0%;
+        transform: scale(1, 1);
+    }
+    50.1% {
+
+        transform-origin: 0% 100%;
+        transform: scale(1, 1);
+    }
+    100% {
+        transform-origin: 0% 100%;
+        transform: scale(1, 0);
+    }
+}
+@keyframes elasticus {
+    0% {
+        transform-origin: 0% 0%;
+        transform: scale(1, 0);
+    }
+    50% {
+        transform-origin: 0% 0%;
+        transform: scale(1, 1);
+    }
+    50.1% {
+        transform-origin: 0% 100%;
+        transform: scale(1, 1);
+    }
+    100% {
+        transform-origin: 0% 100%;
+        transform: scale(1, 0);
+    }
+}
+
+/*About Me*/
+
+.about-me-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
 }
 
 
