--- a/src/App.css
+++ b/src/App.css
@@ -523,6 +523,7 @@ main {
 .tools-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     column-gap: 40px;
