--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,3 @@
-
-/*#D79922 - #EFE2BA - #F13C20 - #4056A1 - #C5CBE3*/
-
-/*
-#BE624E
-#BDB775
-#DEE6D1
-#89C4E4
-#1F155E
-*/
-
 .App {
     width: 100%;
     display: flex;
@@ -163,14 +152,6 @@ header nav ul li:hover .nav-border:before {
 .hamburger__inner:after {
     top: 10px;
 }
-
-/*.hamburger--active .hamburger__inner:after {*/
-/*    background-color: white;*/
-/*}*/
-
-/*.hamburger--active .hamburger__inner:before {*/
-/*    background-color: white;*/
-/*}*/
 
 .hamburger--active .hamburger__inner {
     background-color: transparent;
@@ -646,6 +627,11 @@ footer {
 /*Iphone 6/7/8 Plus*/
 
 @media screen and (max-device-width: 414px) {
+    .hello-section {
+        justify-content: flex-start;
+        padding-top: 200px;
+    }
+
     .name-span {
         font-size: 40px !important;
     }
