--- a/src/App.css
+++ b/src/App.css
@@ -412,20 +412,25 @@ main {
     justify-content: space-around;
     column-gap: 20px;
     row-gap: 20px;
+    margin-top: 60px;
 }
 
-.projects-section figure {
+.project-card {
     display: flex;
-    position: relative;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: 60px;
-    padding: 0;
-    cursor: pointer;
+    flex-direction: column;
+    column-gap: 20px;
+    row-gap: 30px;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 300px;
+    justify-content: space-between;
+    width: 300px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 1px 3px 1px;
 }
 
 .projects-section img {
-    width: 300px;
+    max-width: 300px;
+    width: 100%;
     box-shadow: rgba(17, 17, 26, 0.05) 0 1px 0, rgba(17, 17, 26, 0.1) 0 0 8px;
     border-radius: 10px;
 }
@@ -465,9 +470,9 @@ main {
 }
 
 .card-tools-container {
-    margin-top: 30px;
-    column-gap: 5px;
-    row-gap: 5px;
+    margin-top: 10px;
+    column-gap: 10px;
+    row-gap: 20px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -477,25 +482,34 @@ main {
 
 .tool {
     display: block;
-    padding: 10px;
-    background-color: white;
-    color: black;
+    padding: 10px 20px;
+    background-color: #417093;
+    color: white;
     border-radius: 20px;
     text-align: center;
     font-size: 12px;
+}
+
+.project-card-info {
+    display: flex;
+    flex-direction: column;
+    column-gap: 10px;
+    row-gap: 20px;
+    max-width: 300px;
+    width: 100%;
 }
 
 .project-link {
     margin-top: 10px;
     display: block;
     color: white;
-    padding: 10px;
-    background-color: #BE624E;
+    padding: 10px 20px;
+    background-color: seagreen;
     border-radius: 5px;
 }
 
 .project-link:hover {
-    background-color: seagreen;
+    background-color: #BE624E;
 }
 
 .to-project {
